<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/registration">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_person"
                android:title="@string/sellers" />

            <item
                android:id="@+id/nav_products"
                android:icon="@drawable/ic_box"
                android:title="@string/products" />

            <item
                android:id="@+id/nav_sell"
                android:icon="@drawable/ic_shopping_cart"
                android:title="@string/sell" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item android:title="@string/selling_locations">
            <menu>
            <item
                android:id="@+id/nav_maps"
                android:icon="@drawable/ic_map"
                android:title="@string/maps" />
            </menu>
        </item>
    </group>

</menu>
