<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create"
        android:layout_below="@id/passwordText"
        android:layout_marginStart="300dp"/>

    <Button
        android:id="@+id/readButton"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/read"
        android:layout_below="@id/createButton"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"/>

    <ListView
        android:id="@+id/userList"
        android:layout_width="425dp"
        android:layout_height="324dp"
        android:drawSelectorOnTop="false"
        android:layout_below="@id/readButton"/>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/emailText"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_below="@id/nameText"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/emailText"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>